Assets    : added p_delta image Materials : Fixed card 146 text (bug #105290) UI        : Fixed card 105 power rendering (bug #105391)             Fixed animations times being set to 0 and thus playing all at a time             Fixed prereq not met icon not showing on android mobile, switched to emoji which has more browser support             Removed discard clicks and pointers             Fixed pdelta tracker image in log (#105281)

--- a/src/css/Card.scss
+++ b/src/css/Card.scss
@@ -513,16 +513,18 @@ display: none;
 }
 
 .card[data-invalid_prereq="1"] .card_prereq::after {
-  content:"🛇";
+  content:"🚫";
   color:red;
   font-weight:bold;
+  font-family: Roboto,Arial,Noto;
 }
 .card[data-invalid_prereq="1"] .card_tt_prereq {
   color:red;
 }
 .card[data-invalid_prereq="1"] .card_tt_prereq::before {
-  content:"🛇";
+  content:"🚫";
   color:red;
+  font-family: Roboto,Arial,Noto;
 }
 
 .prereq_content {
