--- a/src/css/Card_specific.scss
+++ b/src/css/Card_specific.scss
@@ -294,6 +294,7 @@
   .card_effect {
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: 1fr 1fr;
+    display: grid;
 
   }
 }
