--- a/src/css/GameXBody.scss
+++ b/src/css/GameXBody.scss
@@ -632,6 +632,13 @@
   }
 }
 
+.log .token_img.tracker_pdelta {
+  background-image: url('img/p_delta.jpg');
+  width: 96px;
+  background-size: contain;
+}
+
+
 #page-title .token_img {
   width: 30px;
   height: 30px;
