--- a/src/css/Map.scss
+++ b/src/css/Map.scss
@@ -1033,7 +1033,7 @@
 }
 
 #discard_title {
-  cursor: pointer;
+ /* cursor: pointer;*/
 }
 
 #card_dlg_content {
